// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-bBXqnf eLNPix Sidebar-resources "
>
  <div
    className="sc-iwyYcG"
  >
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva sc-dIUggk dupdeV kHXhpQ"
        >
          <div
            className="sc-kstrdz sc-hHftDr cBwNhW jqMUKL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ bhjMiS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dmlrTW kxYaFK"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ dCtwyb"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        className="sc-gsTCUz diiocq is-filterButtonsHidden"
      >
        <button
          className="sc-iBPRYJ Inzfl"
          onClick={[Function]}
        >
          Alerts on Top
        </button>
      </div>
      <div
        className="MuiFormControl-root MuiTextField-root sc-fubCfw dQhRfu"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          onClick={[Function]}
        >
          <div
            className="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              style={
                Object {
                  "fill": "#93a1a1",
                }
              }
            >
              search.svg
            </svg>
          </div>
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Filter resources by name"
            required={false}
            type="text"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        resources
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource4"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource4
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource9"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource9
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource19"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource19
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource29"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource29
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource39"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource39
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource49"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource49
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="resource54"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    resource54
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-bBXqnf eLNPix Sidebar-resources "
>
  <div
    className="sc-iwyYcG"
  >
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva sc-dIUggk dupdeV kHXhpQ"
        >
          <div
            className="sc-kstrdz sc-hHftDr cBwNhW jqMUKL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ bhjMiS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dmlrTW kxYaFK"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ dCtwyb"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        className="sc-gsTCUz diiocq is-filterButtonsHidden"
      >
        <button
          className="sc-iBPRYJ Inzfl"
          onClick={[Function]}
        >
          Alerts on Top
        </button>
      </div>
      <div
        className="MuiFormControl-root MuiTextField-root sc-fubCfw dQhRfu"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          onClick={[Function]}
        >
          <div
            className="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              style={
                Object {
                  "fill": "#93a1a1",
                }
              }
            >
              search.svg
            </svg>
          </div>
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Filter resources by name"
            required={false}
            type="text"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        resources
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-bBXqnf eLNPix Sidebar-resources "
>
  <div
    className="sc-iwyYcG"
  >
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva sc-dIUggk dupdeV kHXhpQ"
        >
          <div
            className="sc-kstrdz sc-hHftDr cBwNhW jqMUKL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ bhjMiS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dmlrTW kxYaFK"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ dCtwyb"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        className="sc-gsTCUz diiocq is-filterButtonsHidden"
      >
        <button
          className="sc-iBPRYJ Inzfl"
          onClick={[Function]}
        >
          Alerts on Top
        </button>
      </div>
      <div
        className="MuiFormControl-root MuiTextField-root sc-fubCfw dQhRfu"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          onClick={[Function]}
        >
          <div
            className="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              style={
                Object {
                  "fill": "#93a1a1",
                }
              }
            >
              search.svg
            </svg>
          </div>
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Filter resources by name"
            required={false}
            type="text"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        resources
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="vigoda"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="snack"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Update error
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-bBXqnf eLNPix Sidebar-resources "
>
  <div
    className="sc-iwyYcG"
  >
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva sc-dIUggk dupdeV kHXhpQ"
        >
          <div
            className="sc-kstrdz sc-hHftDr cBwNhW jqMUKL isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-pFZIQ bhjMiS isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dmlrTW kxYaFK"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ dCtwyb"
      style={
        Object {
          "marginTop": "24px",
        }
      }
    >
      <div
        className="sc-gsTCUz diiocq is-filterButtonsHidden"
      >
        <button
          className="sc-iBPRYJ Inzfl"
          onClick={[Function]}
        >
          Alerts on Top
        </button>
      </div>
      <div
        className="MuiFormControl-root MuiTextField-root sc-fubCfw dQhRfu"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
          onClick={[Function]}
        >
          <div
            className="MuiInputAdornment-root MuiInputAdornment-positionStart"
          >
            <svg
              style={
                Object {
                  "fill": "#93a1a1",
                }
              }
            >
              search.svg
            </svg>
          </div>
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            disabled={false}
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Filter resources by name"
            required={false}
            type="text"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-1 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-2"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
    <div>
      <div
        className="sc-cxFLnm iOgMGP"
      >
        resources
      </div>
      <ul
        className="sc-lmoMRL cMgZjm"
      >
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="vigoda"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  —
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="sc-bqyKva dupdeV u-showPinOnHover u-showTriggerModeOnHover  isBuilding"
        >
          <div
            className="sc-kstrdz cBwNhW  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hBEYos keILeX"
            >
              <div
                className="sc-fodVxV liIfTV"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dmlrTW kxYaFK"
                  title="snack"
                >
                  <span
                    className="sc-kfzAmx jkhaEt"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-fFubgz dtAnGh"
                >
                  <button
                    className="sc-jrAGrp gQrCYI"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-iqHYGH ezIjZC"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-fKFyDc coyhml"
                >
                  —
                </span>
                <button
                  className="sc-crrsfI cmzXEn"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "padding": "0 0 0 2px",
                    }
                  }
                  title="Cannot trigger an update while resource is updating or update is pending."
                >
                  <svg>
                    trigger-button.svg
                  </svg>
                </button>
              </div>
              <div
                className="sc-bkzZxe fNmWXB"
              >
                <div
                  aria-describedby={null}
                  className="sc-pFZIQ bhjMiS isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-idOhPF jupexX"
                >
                  Updating…
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
